feat: button types part

--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -26,8 +26,8 @@ export const getStaticProps = async ({ locale }) => {
 };
 
 <SidebarLink>
-  <a href="#default" className="sidebar__link">
-    Default
+  <a href="#types" className="sidebar__link">
+    Types
   </a>
   <a href="#border" className="sidebar__link">
     Border
@@ -45,9 +45,9 @@ export const getStaticProps = async ({ locale }) => {
 
 <PrevAndNext leftPath="/docs/theme" rightPath="/docs/components/alert" />
 
-<div id="default" />
+<div id="types" />
 
-<ComponentExample name="Default" paragraph="Default button component">
+<ComponentExample name="Types" paragraph="The most commonly used button styles.">
   <Default />
 </ComponentExample>
 
