--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -54,10 +54,49 @@ export const getStaticProps = async ({ locale }) => {
 <Code>
   ```jsx
   <button
-    className="w-fit rounded-lg py-2 px-8 cursor-pointer active:scale-95
-        shadow-md text-xs duration-300 bg-[#1a5cff] active:bg-opacity-80
-        ease-in-out bg-transparent font-medium md:text-sm text-white">
-    Default
+    type="button"
+    className="rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 shadow-blue-100 hover:shadow-blue-300
+    bg-blue-600 hover:bg-blue-500 dark:bg-blue-600 text-white">
+    Solid
+  </button>
+  <button
+    type="button"
+    className="rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 bg-transparent dark:bg-transparent
+    hover:bg-blue-600 border-2 border-blue-300 hover:border-blue-600 dark:border-blue-600
+    dark:hover:border-blue-600 text-blue-600 hover:text-white dark:text-blue-600
+    dark:hover:bg-blue-600 dark:hover:text-white">
+    Outline
+  </button>
+  <button
+    type="button"
+    className="rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 hover:shadow-blue-300 duration-200
+    bg-transparent hover:bg-blue-100 dark:bg-transparent dark:hover:bg-blue-100 text-blue-600">
+    Ghost
+  </button>
+  <button
+    type="button"
+    className="rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 hover:shadow-blue-300 duration-200
+    bg-transparent bg-blue-100 hover:bg-blue-600 dark:bg-blue-100 dark:hover:bg-blue-600
+    dark:hover:text-white text-blue-600 hover:text-white">
+    Soft
+  </button>
+  <button
+    type="button"
+    className="rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 bg-transparent dark:bg-transparent
+    border-2 border-blue-300 hover:border-blue-600 dark:border-gray-600 dark:hover:border-gray-500
+    text-blue-600 dark:text-white">
+    White
+  </button>
+  <button
+    type="button"
+    className="hover:underline rounded-xl py-2 px-4 md:py-3 md:px-6 bg-transparent text-blue-600
+    active:text-blue-400">
+    Link
   </button>
   ````
 </Code>
