--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -6,7 +6,8 @@ import { Code } from '@/components/layout/Code';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 import { SidebarLink } from '@/components/layout/SidebarLink';
 
-import { Default } from '@/components/docs/components/button/Default';
+import { Types } from '@/components/docs/components/button/Types';
+import { Rounded } from '@/components/docs/components/button/Rounded';
 import { Border } from '@/components/docs/components/button/Border';
 import { Transparent } from '@/components/docs/components/button/Transparent';
 import { Gradient } from '@/components/docs/components/button/Gradient';
@@ -29,6 +30,9 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#types" className="sidebar__link">
     Types
   </a>
+  <a href="#rounded" className="sidebar__link">
+    Rounded
+  </a>
   <a href="#border" className="sidebar__link">
     Border
   </a>
@@ -48,7 +52,7 @@ export const getStaticProps = async ({ locale }) => {
 <div id="types" />
 
 <ComponentExample name="Types" paragraph="The most commonly used button styles.">
-  <Default />
+  <Types />
 </ComponentExample>
 
 <Code>
@@ -95,6 +99,62 @@ export const getStaticProps = async ({ locale }) => {
   <button
     type="button"
     className="hover:underline rounded-xl py-2 px-4 md:py-3 md:px-6 bg-transparent text-blue-600
+    active:text-blue-400">
+    Link
+  </button>
+  ````
+</Code>
+
+<div id="rounded" />
+
+<ComponentExample name="Rounded" paragraph="The most commonly used button styles.">
+  <Rounded />
+</ComponentExample>
+
+<Code>
+  ```jsx
+  <button
+    type="button"
+    className="rounded-full py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 shadow-blue-100 hover:shadow-blue-300
+    bg-blue-600 hover:bg-blue-500 dark:bg-blue-600 text-white">
+    Solid
+  </button>
+  <button
+    type="button"
+    className="rounded-full py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 bg-transparent dark:bg-transparent
+    hover:bg-blue-600 border-2 border-blue-300 hover:border-blue-600 dark:border-blue-600
+    dark:hover:border-blue-600 text-blue-600 hover:text-white dark:text-blue-600
+    dark:hover:bg-blue-600 dark:hover:text-white">
+    Outline
+  </button>
+  <button
+    type="button"
+    className="rounded-full py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 hover:shadow-blue-300 duration-200
+    bg-transparent hover:bg-blue-100 dark:bg-transparent dark:hover:bg-blue-100 text-blue-600">
+    Ghost
+  </button>
+  <button
+    type="button"
+    className="rounded-full py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 hover:shadow-blue-300 duration-200
+    bg-transparent bg-blue-100 hover:bg-blue-600 dark:bg-blue-100 dark:hover:bg-blue-600
+    dark:hover:text-white text-blue-600 hover:text-white">
+    Soft
+  </button>
+  <button
+    type="button"
+    className="rounded-full py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm duration-200 font-medium
+    text-blue-600 hover:-translate-y-0.5 active:translate-y-0 bg-transparent dark:bg-transparent
+    border-2 border-blue-300 hover:border-blue-600 dark:border-gray-600 dark:hover:border-gray-500
+    text-blue-600 dark:text-white">
+    White
+  </button>
+  <button
+    type="button"
+    className="hover:underline py-2 px-4 md:py-3 md:px-6 bg-transparent text-blue-600
     active:text-blue-400">
     Link
   </button>
