redesign: little map

--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -107,7 +107,9 @@ export const getStaticProps = async ({ locale }) => {
 
 <div id="rounded" />
 
-<ComponentExample name="Rounded" paragraph="The most commonly used button styles.">
+<ComponentExample name="Rounded" paragraph="Use the `.rounded-full` utility class to make buttons circular.
+
+">
   <Rounded />
 </ComponentExample>
 
