--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -529,16 +529,16 @@ export const getStaticProps = async ({ locale }) => {
         disabled
         className="rounded-lg md:rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm font-medium
         text-white bg-blue-600 enabled:hover:bg-blue-500 disabled:opacity-75
-        disabled:cursor-not-allowed enabled:cursor-pointer"
+        disabled:cursor-not-allowed enabled:cursor-pointer disabled:select-none"
         >
         Disabled
       </button>
       <button
         type="button"
+        disabled
         className="rounded-lg md:rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm border font-medium
         bg-white text-gray-500 shadow-sm cursor-not-allowed dark:bg-gray-800
-        dark:hover:bg-slate-800 dark:border-gray-700 dark:text-gray-400"
-        disabled>
+        dark:hover:bg-slate-800 dark:border-gray-700 dark:text-gray-400 disabled:select-none">
         Disabled
       </button>
   ```
